--- a/content/01.abstract.md
+++ b/content/01.abstract.md
@@ -9,13 +9,6 @@ As part of the course project for the class, project group 7 acquired bus riders
 Loaded from the latest version of image on GitHub.
 ](https://github.com/banyekalaok/cee498report/blob/master/content/images/Figure1.png "foo2"){#fig:square-image}
 
-<p><img src="https://github.com/manubot/resources/raw/15493970f8882fce22bef829619d3fb37a613ba5/test/square.png" alt="foo3" title="title" /></p>
-
-![
-**A square image at actual size and with a bottom caption.**
-Loaded from the latest version of image on GitHub.
-](https://github.com/manubot/resources/raw/15493970f8882fce22bef829619d3fb37a613ba5/test/square.png "foo4"){#fig:square-image}
-
 
 ## Project Group 7's Objective 
 
@@ -26,7 +19,7 @@ Group 7's project objective is to use the bus data to predict the buses load ave
 The report was developed using Manubot to allow for a collaborative effort among the 6 group members. The explaratory data analysis (EDA) and model were developed using Python 3 in a Kaggle Notebook and Jupyter integrated development environment (IDE). The content in the following report is broken down into the following 4 main chapters:
 
 1. **Introduction** - The current chapter which introduces the project scope and objective.
-2. ** Explaratory Data Analysis** - This chapter details the EDA process, findings and key takeaways.
+2. **Explaratory Data Analysis** - This chapter details the EDA process, findings and key takeaways.
 3. **Model Development** - This section describes the step-by-step methodology used to determine the best model to predict the load averages.
 4. **Conclusions** - This section briefly highlights the key takeaways from the model development efforts and the report in general.
 
@@ -34,17 +27,21 @@ The report was developed using Manubot to allow for a collaborative effort among
 
 The content in chapter 2 is broken down into the following 3 sections:
 
-1) **Data Tidying** - This section discusses how the raw bus data was cleaned and prepared for the EDA analysis. The section also details the independent and dependent variables used in the analysis.
+1. **Data Tidying** - This section discusses how the raw bus data was cleaned and prepared for the EDA analysis. The section also details the independent and dependent variables used in the analysis.
 
-2) **Investigating Data Insights** - This section details the bus data EDA process and outcomes.
+2. **Investigating Data Insights** - This section details the bus data EDA process and outcomes.
 
-3) **EDA Summary and Conclusions** - This section summarizes the key findings and conclusions from the EDA.
+3. **EDA Summary and Conclusions** - This section summarizes the key findings and conclusions from the EDA.
 
 ## Data Tidying 
 
 ### Independent Variables
 
-The CU-MTD bus data was provided as a csv file. Therefore, the easiest way to setup, tidy and initially analyze the data was in tabular form. The bus data was then assessed for meaningful ways it can be subdivided based on identifying independent variables. As shown in figure 1 below, the number of trips are fairly evenly distributed throughout the week.
+The CU-MTD bus data was provided as a csv file. Therefore, the easiest way to setup, tidy and initially analyze the data was in tabular form. First, we dropped all the empty columns and columns with categorical values or string values, which can not be used as inputs to train the model. Then a heatmap is used to show the pair-wise correlation between the remaining features and our target 'Load avg', which gives us an idea which features might be the most predictive. 
+
+### correlation heat map
+
+The bus data was then assessed for meaningful ways it can be subdivided based on identifying independent variables. As shown in figure 1 below, the number of trips are fairly evenly distributed throughout the week.
 
 **Figure 1. Trip distribution per weekday**
 
