--- a/content/01.abstract.md
+++ b/content/01.abstract.md
@@ -4,7 +4,7 @@ As part of the course project for the class, project group 7 acquired bus riders
 
 ![
 **CUMTD Route Map**
-](images/Figure1.png "CUMTD Route Map"){#fig:wide-image}
+](images/Figure1.png "CUMTD Route Map")
 
 
 =======
@@ -38,7 +38,7 @@ The report was developed using Manubot to allow for a collaborative effort among
 3. **Model Development** - This section describes the step-by-step methodology used to determine the best model to predict the load averages.
 4. **Conclusions** - This section briefly highlights the key takeaways from the model development efforts and the report in general.
 
-# Chapter 2. Explaratory Data Analysis
+# Chapter 2. Exploratory Data Analysis
 
 The content in chapter 2 is broken down into the following 3 sections:
 
@@ -52,10 +52,7 @@ The content in chapter 2 is broken down into the following 3 sections:
 
 ### Independent Variables
 
-The CU-MTD bus data was provided as a csv file. Therefore, the easiest way to setup, tidy and initially analyze the data was in tabular form. First, we dropped all the empty columns and columns with categorical values or string values, which can not be used as inputs to train the model. Then a heatmap is used to show the pair-wise correlation between the remaining features and our target 'Load avg', which gives us an idea which features might be the most predictive. 
-
-### correlation heat map
-
+The CU-MTD bus data was provided as a csv file. Therefore, the easiest way to setup, tidy and initially analyze the data was in tabular form. 
 The bus data was then assessed for meaningful ways it can be subdivided based on identifying independent variables. As shown in figure 1 below, the number of trips are fairly evenly distributed throughout the week.
 
 **Figure 1. Trip distribution per weekday**
@@ -75,6 +72,10 @@ One of the unique challenges faced in this data was what to do with the time dat
 ## Investigating Data Inisghts
 
 ***Show meaningful plots and correlations. A few examples are provided below***
+
+First, we dropped all the empty columns and columns with categorical values or string values, which can not be used as inputs to train the model. Then a heatmap is used to show the pair-wise correlation between the remaining features and our target 'Load avg', which gives us an idea which features might be the most predictive. 
+
+![correlation heat map](images/eda6.png){#fig:image2}
 
 As can be seen in figure 8, each day has a very similar distribution, however, Monday and Thursday have some outliers beyond the maximum. This gives some insight and confirms that the number of trips per day are fairly evenly distributed.
 
