--- a/content/01.abstract.md
+++ b/content/01.abstract.md
@@ -193,8 +193,7 @@ A typical neural network model would have three kinds of layers, which are input
 **Figure #. Nenural Network.**
 
 When processing the code, in the training part, take learning rate to adjust weight correction. The formula is shown in **Figure #**. In every time, input signal into neural network model, and multiple learning rate, local gradient could correct the model sequentially. After all process done, the model would be optimized as precise as possible, similar to human brain. 
-https://github.com/banyekalaok/cee498report/blob/master/content/images/Weight%20correction.png
-![Weight correciton](images/Weight correction.png)
+![Weight correciton](content/images/Weight correction.png)
 **Figure #. Weight correction.**
 
 In the neural network model, find an optimum way to weight correction is crucial. If a network performs well on the training data but very badly on testing set, the network might be over-trained, which is overfitting. On the other hand, if the network works bad on the training data, the network might be under-trained, which is underfitting. Besides, an under-trained network also performs badly on the testing set. A drawing to compare these would be shown in **Figure #**.
