--- a/content/01.abstract.md
+++ b/content/01.abstract.md
@@ -194,7 +194,7 @@ A typical neural network model would have three kinds of layers, which are input
 
 When processing the code, in the training part, take learning rate to adjust weight correction. The formula is shown in **Figure #**. In every time, input signal into neural network model, and multiple learning rate, local gradient could correct the model sequentially. After all process done, the model would be optimized as precise as possible, similar to human brain. 
 
-![Weight correciton](content/images/Weight correction.png)
+![Weight correciton](images/Weight correction.png)
 
 **Figure #. Weight correction.**
 
