--- a/content/01.abstract.md
+++ b/content/01.abstract.md
@@ -167,6 +167,7 @@ Models learn best and fasted when the data is scaled, most commonly between valu
 
 In the standardization, the core idea is to convert each feature in the data so that the mean value of each feature is 0 and the standard deviation is 1. The general method of calculation is to determine the distribution mean and standard deviation for each feature. The formula showing how to transform the values is shown as follow.
 
+$$x^'=\frac{x-\overline{x}}{\sigma}$$
 
 #### Converting Categorical Features to Numerical
 
