--- a/content/01.abstract.md
+++ b/content/01.abstract.md
@@ -167,11 +167,17 @@ Models learn best and fasted when the data is scaled, most commonly between valu
 
 In the standardization, the core idea is to convert each feature in the data so that the mean value of each feature is 0 and the standard deviation is 1. The general method of calculation is to determine the distribution mean and standard deviation for each feature. The formula showing how to transform the values is shown as follow.
 
-$$x^'=\frac{x-\overline{x}}{\sigma}$$
+**Figure x. Z-score Normalization**
 
-#### Converting Categorical Features to Numerical
+### Converting Categorical Features to Numerical
 
 To allow the model to learn from the categorical features, they need to be converted to numerical features. The following section details how the conversions were conducted.
+
+### One-hot coding
+
+Since most machine learning algorithms require numerical input and output variables. We have three categorical data now. We can use the one hot encoding to convert categorical data to integer data. **Figure x** is an example of how a dataframe looks like after one hot encoding. In python, we can use panda’s ‘pd.get_dummies’ function to achieve this. however, we find that the accuracy of model will be less after adding the these three features into our training data. Then we decided to drop all of them.
+
+**Figure x. One-hot Coding Example**
 
 - The EDA revealed that there are 39 unique lines that conduct a wide range of rides from 2 to 1,300. Since the line is a strong predicator of bus loads (i.e., popular lines will likely have larger loads), the line were converted via one-hot encoding.
 - The EDA revealed that there are 7 unique vehicle types that conduct a wide range of rides from 452 to 9,414 . Since the vehicle type is a strong predicator of bus loads (i.e., larger vehicles can carry larger loads), the vehicle type was also converted via one-hot encoding.
