--- a/content/01.abstract.md
+++ b/content/01.abstract.md
@@ -107,6 +107,9 @@ The following features were identified to have strong predictive ability, indica
 * Max (0.90).
 * PM (0.85).
 
+
+
+
 # Chapter 3. Feature Engineering and Data Preprocessing
 
 ## Feature Engineering
@@ -130,6 +133,8 @@ The EDA also revealed that the following data sets had numbers that didn't actua
 
 * **No (train)/index (test)**, **Trip**,**Block**, **Course**, **Pattern**, and **Vehicle**.
 * **Date**, **Sched. start**, and **Sched. end** - They were used to determine the schedules, day and duration. From here on, they no longer have model development value.
+
+
 
 ## Data Preprocessing
 
@@ -169,11 +174,10 @@ In the standardization, the core idea is to convert each feature in the data so 
 
 **Figure x. Z-score Normalization**
 
-### Converting Categorical Features to Numerical
-
-To allow the model to learn from the categorical features, they need to be converted to numerical features. The following section details how the conversions were conducted.
 
 ### One-hot coding
+
+To allow the model to learn from the categorical features, they need to be converted to numerical features. The following section details how the conversions were conducted.
 
 Since most machine learning algorithms require numerical input and output variables. We have three categorical data now. We can use the one hot encoding to convert categorical data to integer data. **Figure x** is an example of how a dataframe looks like after one hot encoding. In python, we can use panda’s ‘pd.get_dummies’ function to achieve this. however, we find that the accuracy of model will be less after adding the these three features into our training data. Then we decided to drop all of them.
 
@@ -185,9 +189,11 @@ Since most machine learning algorithms require numerical input and output variab
 
 In our project, We create a function called "preprocessing" which including serval functions to deal with different data as we discussed earlier. Feature engineering, Handing Missing data, Feature scaling and One-hot encoding method are included in this function.
 
+
 ### Cross-validation
 
 In order to flag problems like overfitting or selection bias, we can do the cross-validation. Cross-validation is a technique in which we train our model using the subset of the data-set and then evaluate using the complementary subset of the data-set. This step is done to minimize the likelihood of creating a model that will over or underfit the data. To do the Cross-validation, we should split a part of original traning data as a validation set. In this case, I split the training set into X_train (80% of the original size of train_data) and X_validation (20% of the original size of train_data).
+
 
 # Chapter 4. Model Development Process
 
@@ -233,13 +239,24 @@ After the optimization as stochastic gradient descent (SGD), take learning rate 
 
 ### Most Predictive Model
 
-** My model was best with relu layers and dropout regularization only. Would probably be even better if it had automatic hyperparameter and parameter selection!**
+** My model was best with relu layers and dropout regularization only. Would probably be even better if it had automatic hyperparameter and parameter selection!**（Kundayi)
 
-# Chapter 4. Conclusions
+Our most predictive model is a type of neural network model using the sklearn package. The model is called GradientBoostingRegressor. Gradient Boosting = Gradient descent + Boosting.
+
+-	The basic idea of Boosting is to combine several weak learners into a stronger one.
+
+-	Boosting models try predictors sequentially, and the subsequent model attempts to fix the errors of its predecessor.
+
+-	Gradient boosting is a type of boosting algorithm. It relies on the intuition that the best possible next model, when combined with previous models, minimizes the overall prediction error. 
+
+-	the Hyperparameters used in the model are shown above. They were ultimately selected by a grid search method. 
+
+
+# Chapter 5. Conclusions
 
 As was shown in chapter 3 the most predictive model was able to predict the load average with ## accuracy. Some factors need to be taken into consdieration about this process:
 
 1. A significant amount of pre-processing was used - To make this model more cost- and time-effective the input data needs to be tidy before going into the data. This can be achieved by changing the way the data is stored or creating classes and functions that automatically clean the data.
 2. Reliablity - This model was developed using data from a single month from 2020 (August). Therefore, although the model had high predictive potential with the August data. It is possible that the model is not able to accurately predict load averages for other months were passenger habits may significantly differ (e.g., middle of summer, winter or spring). Thererfore, to truly optimize the model a larger year round data set is recommended. It would probably be best to train the model using at least 1 month of data from the 4 seasons of a year.
-3. 
+
 
