--- a/content/01.abstract.md
+++ b/content/01.abstract.md
@@ -9,6 +9,7 @@ As part of the course project for the class, project group 7 acquired bus riders
 ## 1.1 Background
 Bus operations are complex systems as they function at the intersection of transportation infrastructure and planning based on continually evolving user patterns.
 If we can predict the passenger loads, bus system can be run more efficiently and economically. Therefore, we investigated the ridership of the CUMTD bus system to attempt to find the optimal way to predict load averages (avg # of passengers onboard during a trip). 
+A lot of cities are currently implementing congestion pricing to ease traffic congestion or decrease pollution. But what is congestion pricing and why does it is it effective? 
 
 ## 1.2 Dataset Overview
 We received 3 datasets containing route performance and bus ridership data from CUMTD. For this project, we focused on the bus ridership per trip weekday data for the month of August. We will find the most appropriate variables for the accuracy of our prediction, and choose the optimal machine learning model for Kaggle competition.
