--- a/content/01.abstract.md
+++ b/content/01.abstract.md
@@ -232,13 +232,21 @@ After the optimization as stochastic gradient descent (SGD), take learning rate 
 
 ### Most Predictive Model
 
-** My model was best with relu layers and dropout regularization only. Would probably be even better if it had automatic hyperparameter and parameter selection!**
+**My model was best with relu layers and dropout regularization only. Would probably be even better if it had automatic hyperparameter and parameter selection!(kundayi)**
 
-# Chapter 4. Conclusions
+Our best mode is a type of neural network model developed by Yujing using the sklearn package.
+
+*	The basic idea of Boosting is to combine several weak learners into a stronger one.
+
+*	Boosting models try predictors sequentially, and the subsequent model attempts to fix the errors of its predecessor.
+
+*	Gradient boosting is a type of boosting algorithm. It relies on the intuition that the best possible next model, when combined with previous models, minimizes the overall prediction error. 
+
+
+# Chapter 5. Conclusions
 
 As was shown in chapter 3 the most predictive model was able to predict the load average with ## accuracy. Some factors need to be taken into consdieration about this process:
 
 1. A significant amount of pre-processing was used - To make this model more cost- and time-effective the input data needs to be tidy before going into the data. This can be achieved by changing the way the data is stored or creating classes and functions that automatically clean the data.
 2. Reliablity - This model was developed using data from a single month from 2020 (August). Therefore, although the model had high predictive potential with the August data. It is possible that the model is not able to accurately predict load averages for other months were passenger habits may significantly differ (e.g., middle of summer, winter or spring). Thererfore, to truly optimize the model a larger year round data set is recommended. It would probably be best to train the model using at least 1 month of data from the 4 seasons of a year.
-3. 
 
