--- a/content/01.abstract.md
+++ b/content/01.abstract.md
@@ -138,6 +138,10 @@ Data preprocessing is an indispensable step in machine learning. It is important
 
 Data in the real world always have few missing values. This phenomena may be due to many reasons. There are many methods to handing missing values such as ignore the data row with missing value, replacing the missing value with mean or median value. **Table x** shows the top 8 percentage of missing value for each feature. 1.0 means all the values are missing. 0.0 means none of the data is missing. Here, the missing value of ‘Trip’ are filled with the mean of all the existing 'Trip' values. From the table we can know the eighth large of the percentage is already 0, which proves that there is no missing data for other features not appearing in the table.
 
+**Table x** Percentage of Missing Value
+
+![](images/missingvalue.png)
+
 
 ### Feature Scaling
 
