--- a/content/01.abstract.md
+++ b/content/01.abstract.md
@@ -250,7 +250,7 @@ Our best mode is a type of neural network model developed by Yujing using the sk
 
 *	Gradient boosting is a type of boosting algorithm. It relies on the intuition that the best possible next model, when combined with previous models, minimizes the overall prediction error. 
 
-![](images/Gradient Boosting Algorithm.png)
+![](images/GradientBoosting.png)
 
 **Figure x. Gradient Boosting Algorithm**
 
