--- a/content/01.abstract.md
+++ b/content/01.abstract.md
@@ -9,7 +9,6 @@ As part of the course project for the class, project group 7 acquired bus riders
 ## 1.1 Background
 Bus operations are complex systems as they function at the intersection of transportation infrastructure and planning based on continually evolving user patterns.
 If we can predict the passenger loads, bus system can be run more efficiently and economically. Therefore, we investigated the ridership of the CUMTD bus system to attempt to find the optimal way to predict load averages (avg # of passengers onboard during a trip). 
-A lot of cities are currently implementing congestion pricing to ease traffic congestion or decrease pollution. But what is congestion pricing and why does it is it effective? 
 
 ## 1.2 Dataset Overview
 We received 3 datasets containing route performance and bus ridership data from CUMTD. For this project, we focused on the bus ridership per trip weekday data for the month of August. We will find the most appropriate variables for the accuracy of our prediction, and choose the optimal machine learning model for Kaggle competition.
@@ -82,12 +81,22 @@ Then, a pairwise scatter plot is used to show the degree of linearity of the rel
 
 As can be seen in figure 8, each day has a very similar distribution, however, Monday and Thursday have some outliers beyond the maximum. This gives some insight and confirms that the number of trips per day are fairly evenly distributed.
 
-**Figure 8. Box plot of duration per day full dataset.**
+Also, for CUMTD, different bus lines serve specific groups of people. In this way, it is important to find the characteristic of each bus line during August. First, we create different Dataframe for different bus line. Since the bus name is not easy to show in graphs, we use [Number of Routes' Names in CUMTD](http://mtd.org/maps-and-schedules/routes/) to instead. For some bus line which has different types of bus number based on different routes or different service timeline (for example, 1 Yellow serves during weekdays’ morning and afternoon, and 100 Yellow serves during weekdays’ evening and the whole weekends; 5 Green have normal line and express line or hopper line which similar but different routes), we separate all of them into different name and expressions. After that, we pick up their statistic of “Load Average” in average, and combine with comparison, showing on figure 9.
 
-Figure 14 informs that the a $ trip < 12 minutes $ long have no stops. The number of stops then steadily increase with time to a max of 42 at a trip of duration ~ 55 to 65 minutes.
+![Load Avg for all buses in average](images/load_avg_in_all_days(average).png){#fig:square-image}
 
+What's more, to compare the characteristic of each bus line on each day of August, we separate the load average in each into different serving days, which shows on figure 10. Moreover, to find its own difference of each bus route, especially the difference between summer holidays and the opening week of the new semester, we combine the load average of each line in different days and plot them together, which shows on figure 11.
 
-**Figure 14. Bar plot of duration against P-stops filtered dataset.**
+![Load Avg in each day](images/load_avg_in_each_day.png){#fig:tall-image height=10in}
+
+![Load Avg for each bus line](images/load_avg_in_each_bus_line.png){#fig:tall-image height=10in}
+
+With these comparisons, some takeaways can be summarized as follows:
+
+* There were only a few increasement after semester opened. It shows that the pandemic decreases the students' willingness of taking buses to face-to-face classes.
+* In August, the YELLOW, RED, LAVENDER, GREEN and GREY buses have relatively high passengers.
+* The Illini routes changed the most after semester started, we believe one of the reasons is that students who live in One North or One South must take buses to the classroom.
+
 
 ## EDA Results Summary
 
