--- a/content/01.abstract.md
+++ b/content/01.abstract.md
@@ -81,7 +81,14 @@ Then, a pairwise scatter plot is used to show the degree of linearity of the rel
 
 ![correlation heat map](images/eda7.png)
 
-Also, for CUMTD, different bus lines serve specific groups of people. In this way, it is important to find the characteristic of each bus line during August. First, we create different Dataframe for different bus line. Since the bus name is not easy to show in graphs, we use [Number of Routes' Names in CUMTD](http://mtd.org/maps-and-schedules/routes/) to instead. For some bus line which has different types of bus number based on different routes or different service timeline (for example, 1 Yellow serves during weekdays’ morning and afternoon, and 100 Yellow serves during weekdays’ evening and the whole weekends; 5 Green have normal line and express line or hopper line which similar but different routes), we separate all of them into different name and expressions. After that, we pick up their statistic of “Load Average” in average, and combine with comparison, showing as below.
+Next, we try to find the charateristic of load average in different workdays. By seperating load average into different workdays from Monday to Friday, we plot the sum of the load average and their durations showing as below.
+
+![Load Avg in weekdays](images/Load_Avg_weekdays.png)
+![Duration of Load Avg](images/Load_Avg_duration.png)
+
+From the figures, we find that the number of trips are fairly evenly distributed throughout the week, and the start and end of the work week have outliers.
+
+Also, for CUMTD, different bus lines serve specific groups of people. In this way, it is important to find the characteristic of each bus line during August. First, we create different Dataframe for different bus line. Since the bus name is not easy to show in graphs, we use [Number of Routes' Names in CUMTD](http://mtd.org/maps-and-schedules/routes/) to instead. For some bus line which has different types of bus number based on different routes or different service timeline (for example, 1 Yellow serves during weekdays’ morning and afternoon, and 100 Yellow serves during weekdays’ evening and the whole weekends; 5 Green have normal line and express line or hopper line which similar but different routes), we separate all of them into different name and expressions. After that, we pick up their statistic of “Load Average” in average, and combine with comparison, showing as below. (Note: In the left figure, "Ex" stands for express buses, "H" stands for Hopper, "L" stands for late night buses, "M" stands for maintenance buses and "T" stands for training buses)
 
 ![Load Avg for all buses in average](images/load_avg_in_all_days(average).png){#fig:square-image}
 
