--- a/content/01.abstract.md
+++ b/content/01.abstract.md
@@ -92,6 +92,8 @@ Also, for CUMTD, different bus lines serve specific groups of people. In this wa
 
 ![Load Avg for all buses in average](images/load_avg_in_all_days(average).png){#fig:square-image}
 
+*Note: In the left figure, "Ex" stands for express buses, "H" stands for Hopper, "L" stands for late night buses, "M" stands for maintenance buses and "T" stands for training buses
+
 What's more, to compare the characteristic of each bus line on each day of August, we separate the load average in each into different serving days, which shows as below. Moreover, to find its own difference of each bus route, especially the difference between summer holidays and the opening week of the new semester, we combine the load average of each line in different days and plot them together, which shows as below.
 
 ![Load Avg in each day](images/load_avg_in_each_day.png){#fig:tall-image height=10in}
