--- a/content/01.abstract.md
+++ b/content/01.abstract.md
@@ -34,7 +34,7 @@ Group 7's project objective is to use the bus data to predict the buses load ave
 The report was developed using Manubot to allow for a collaborative effort among the 6 group members. The explaratory data analysis (EDA) and model were developed using Python 3 in a Kaggle Notebook and Jupyter integrated development environment (IDE). The content in the following report is broken down into the following 4 main chapters:
 
 1. **Introduction** - The current chapter which introduces the project scope and objective.
-2. **Explaratory Data Analysis** - This chapter details the EDA process, findings and key takeaways.
+2. **Exploratory Data Analysis** - This chapter details the EDA process, findings and key takeaways.
 3. **Model Development** - This section describes the step-by-step methodology used to determine the best model to predict the load averages.
 4. **Conclusions** - This section briefly highlights the key takeaways from the model development efforts and the report in general.
 
@@ -67,8 +67,6 @@ The following section summarizes the EDA results that are relevant to the model 
 One of the unique challenges faced in this data was what to do with the time data (schedule start and end times). Firstly, the data was provided as strings, therefore, they needed to be converted to datetime format. Secondly, some of the data entries that were not on the conventional 24-hr time format, i.e., some times were between 24:00 and 26:00 hours. This is likely because the timestamps represent the bus driver workshifts. Workshifts are easier to monitor and track on a continous scale from clock-in to clock-out than to break-up because of the start of a new day. A function was created to correct the time to be in the 24-hr format then the times were used to determine the duration of a trip (schedule end time - schedule start time).
 
 ## Investigating Data Inisghts
-
-***Show meaningful plots and correlations. A few examples are provided below***
 
 First, we dropped all the empty columns and columns with categorical values or string values, which can not be used as inputs to train the model. Then a heatmap is used to show the pair-wise correlation between the remaining features and our target 'Load avg', which gives us an idea which features might be the most predictive and which features we should drop because of a poor correlation with our target. 
 
@@ -156,24 +154,7 @@ Data in the real world always have few missing values. This phenomena may be due
 
 Feature scaling is a method used to standardize independent variables or feature ranges of data. Since the value range of some original data is very different, the model will give more weight to the feature with large values in the learning process. However, in fact, the weight of each feature should not be considered in this way. In some machine learning algorithms, the objective function cannot work properly without normalization.
 
-#### Rescaling (min-max normalization)
-
-The purpose of feature scaling is to transform the data into common scales. 
-
-Before scaling the data, lets view some data statistics to refresh our memory on what was learned in the EDA. The key takeaway from the graphics below are:
-
-* A linear model might project the load avg but it likely won't be the best model.
-* The correlations matrix confirms that the identified predictive features are likely to result in a good model (except for minimum).
-
-
 **Figure #. Comparison of key predictive variables against load average.**
-
- 
-**Figure #. Correlation matrix of key predictive variables.**
-
-From the statistics above, notice that the minimum load (**Min**) has a very low correlation with the load average, therefore, min has low predictive value. Also, notice that **total in** and **total out** are strongly correlated, implying that the sum of boardings during a trip is almost always the same as the sum of alightings. Therefore, only 1 of these 2 features are needed. The **total out** will not be considered in the model development effort.
-
-Models learn best and fasted when the data is scaled, most commonly between values of -1 and 1 or 0 and 1. Since, all the numerical values are greater than 0, the numerical features were scaled using normalization (scaling from 0 to 1). 
 
 #### Standardization (Z-score Normalization)
 
@@ -204,8 +185,6 @@ In order to flag problems like overfitting or selection bias, we can do the cros
 # Chapter 4. Model Development Process
 
 The follow sections goes through a step by step process to develop and identify the best model to predict the load average on the test data.
-
-** I recommend we show 3 models. For each we should: discuss parameters and hyperparameters, show RMSE vs epochs (and perhaps 1 other metric [I used MAE]), then show predictions against targets.
 
 ### Establish a Baseline Model
 
