--- a/content/01.abstract.md
+++ b/content/01.abstract.md
@@ -58,11 +58,11 @@ The bus data was then assessed for meaningful ways it can be subdivided based on
 
 ![
 **Load Avg in weekdays**
-](images/Load_Avg_weekdays.png)
+](images/Load_Avg_weekdays.png){#fig:square-image}
 
 ![
 **Duration of Load Avg**
-](images/Load_Avg_duration.png)
+](images/Load_Avg_duration.png "Duration")
 
 Notice that Monday, the start of the work week, has the most trips. Since we only have 1 month of data (August), no strong conclusions can be made at this point.
 The following section summarizes the EDA results that are relevant to the model development effort.
